noinst_LIBRARIES = liboct_parser.a liboct.a

liboct_parser_a_SOURCES = symbols.c parse.c parse_exp.c string_f.c parser_f.c
EXTRA_liboct_parser_a_SOURCES = grammar.y

liboct_a_SOURCES = recipes.c ylm.c varia.c oct_f.c write_iter.c

noinst_HEADERS = parser.h symbols.h string_f.h varia.h

CLEANFILES = *~ *.bak
DISTCLEANFILES = Makefile.in
